--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
 	},
 	"main": "dist/index.js",
 	"scripts": {
-		"lint": "eslint --ext .js,.ts .",
-		"lint:fix": "eslint --fix --ext .js,.ts .",
-		"format": "prettier --write '**/*'",
-		"prepack": "oclif-dev manifest && oclif-dev readme --multi --dir=docs/commands && npm shrinkwrap && npm prune --production && npm shrinkwrap",
+		"lint": "../node_modules/.bin/eslint --ext .js,.ts .",
+		"lint:fix": "../node_modules/.bin/eslint --fix --ext .js,.ts .",
+		"format": "../node_modules/.bin/prettier --write '**/*'",
+		"prepack": "../node_modules/.bin/oclif-dev manifest && oclif-dev readme --multi --dir=docs/commands && npm shrinkwrap && npm prune --production && npm shrinkwrap",
 		"prebuild": "if test -d dist; then rm -r dist; fi; rm -f tsconfig.tsbuildinfo; rm -f npm-shrinkwrap.json",
-		"start": "echo Run \"./bin/run start\" to start the app",
-		"build": "tsc",
-		"test": "jest --passWithNoTests",
-		"test:coverage": "jest --passWithNoTests --coverage=true --coverage-reporters=text",
-		"test:ci": "jest --passWithNoTests --coverage=true --coverage-reporters=json --verbose",
-		"version": "oclif-dev readme --multi --dir=docs/commands && git add README.md docs",
+		"start": "echo Run \\\\\\\"bin/run start\\\\\\\" to start the app",
+		"build": "../node_modules/.bin/tsc",
+		"test": "../node_modules/.bin/jest --passWithNoTests",
+		"test:coverage": "../node_modules/.bin/jest --passWithNoTests --coverage=true --coverage-reporters=text",
+		"test:ci": "../node_modules/.bin/jest --passWithNoTests --coverage=true --coverage-reporters=json --verbose",
+		"version": "../node_modules/.bin/oclif-dev readme --multi --dir=docs/commands && git add README.md docs",
 		"prepublishOnly": "npm ci && npm run lint && npm run build"
 	},
 	"bin": {
-		"journals": "./bin/run"
+		"journals": "bin/run"
 	},
 	"lisk": {
 		"addressPrefix": "lsk"
@@ -85,11 +85,11 @@
 		}
 	},
 	"files": [
-		"/bin",
+		"/blockchain/bin",
 		"/npm-shrinkwrap.json",
 		"/oclif.manifest.json",
 		"/dist",
-		"/config",
+		"/blockchain/config",
 		"/docs"
 	],
 	"husky": {
@@ -106,8 +106,8 @@
 		"axios": "0.21.1",
 		"fs-extra": "9.0.1",
 		"inquirer": "7.3.2",
-		"lisk-commander": "^5.1.0",
-		"lisk-sdk": "^5.1.1",
+		"lisk-commander": "5.1.2",
+		"lisk-sdk": "5.1.1",
 		"remeda": "0.0.28",
 		"tar": "6.0.2",
 		"tslib": "1.13.0"
