--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
 		"rootDir": "./src",
 		"outDir": "./dist"
 	},
-	"include": ["./blockchain/src/**/*.ts", "./blockchain/src/**/*.json"]
+	"include": ["./src/**/*.ts", "./src/**/*.json"]
 }
